# Rust-Training

./: .gitignore  README.md  Setup.md  create-outline-pdf.sh  project-resources.branch
Agenda/: outline.md
challenges/: advanced.md  basics.md  intermediate.md
examples/: README.md
examples/01-variables/: README.md
examples/01-variables-and-types/: README.md  constants.rs  immutable  immutable.rs  shadow_constants.rs  shadowing.rs  strictly_typed.rs  strongly_typed.rs
examples/02-functions/: README.md  optional_return.rs  passing_arguments.rs  returning_value.rs  simple.rs  stack_overflow.rs
examples/03-control-flow/: README.md  for.rs  for_with_range.rs  if_assignment.rs  loop_assignment.rs  loop_forever.rs  loop_interrupted.rs  while.rs
examples/04-ownership/: README.md  dangling_pointer.rs  first_word.rs  greeting.rs  greeting_moved.rs  multi_mutable_references.rs  mutable_integers.rs  mutable_ref_var.rs  pass_by.rs  primer.rs  pseudo.rs  relation_bw_string_and_str.rs  slice_of_integers.rs  slices.rs  string_literals.rs  string_simple.rs
examples/05-structs/: README.md  display.rs  last_name.rs  methods.rs  points.rs  rectangle.rs  simple.rs  stack_struct.rs  struct_tuple.rs  unit.rs
examples/06-enums/: README.md  actions.rs  coins.rs  option_simple.rs  read_line.rs  simple.rs
examples/07-project-management/: README.md
examples/07-project-management/sample/: Cargo.toml
examples/07-project-management/sample/src/: lib.rs  main.rs  people.rs
examples/07-project-management/sample/src/greet/: mod.rs  people.rs
scratchpad/: Cargo.toml
(+189 files in other folders)
