[package]
name = "sample"
version = "0.1.0"
authors = ["Gaurav Agarwal <algogrit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

# [profile.dev]
# opt-level = 0

# [profile.release]
# opt-level = 3
